@@ -33,6 +33,7 @@ r-mtalpha-sim.sh: r-mt-sim.sh.in Makefile.am
 	 -e 's|@slc_datadir[@]|$(pkgdatadir)|g' \
 	 -e 's|@MGSIM_ARCH[@]|$(MGSIM_ALPHA)|g' \
 	 -e 's|@SIMX_ARCH[@]|$(SIMX_ALPHA)|g' \
+	 -e 's|@NM_ARCH[@]|$(NM_MTALPHA)|g' \
 	 -e 's|@ARCH[@]|ALPHA|g' \
 	 -e 's|@arch[@]|alpha|g' \
 	 -e 's|@BASH[@]|$(BASH)|g' \
@@ -46,9 +47,11 @@ r-mtsparc-sim.sh: r-mt-sim.sh.in Makefile.am
 	 -e 's|@slc_datadir[@]|$(pkgdatadir)|g' \
 	 -e 's|@MGSIM_ARCH[@]|$(MGSIM_SPARC)|g' \
 	 -e 's|@SIMX_ARCH[@]|$(SIMX_SPARC)|g' \
+	 -e 's|@NM_ARCH[@]|$(NM_MTSPARC)|g' \
 	 -e 's|@ARCH[@]|SPARC|g' \
 	 -e 's|@arch[@]|sparc|g' \
-	 -e 's|@BASH[@]|$(BASH)|g'
+	 -e 's|@BASH[@]|$(BASH)|g' \
+	 -e 's|@python[@]|$(PYTHON)|g'
 	$(AM_V_at)chmod +x,a-w $@.out
 	$(AM_V_at)mv -f $@.out $@
 
